--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -106,3 +106,25 @@ a:hover .vizitka {
     margin: 1em;
     box-shadow: 5px 5px 10px black;
 }
+
+.novaVizitka {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    /*background-color: aliceblue;*/
+}
+
+.novaVizitka--form {
+    width: 600px;
+    background-color: #FFFFFF98;
+}
+
+.novaVizitka--form form {
+    padding: 40px;
+}
+
+.novaVizitka--form h1 {
+    padding: 20px 0 0 40px;
+}
+
