--- a/src/main/resources/templates/detail.html
+++ b/src/main/resources/templates/detail.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Vizitkovník</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
     <link rel="stylesheet" href="/css/style.css">
@@ -34,6 +35,12 @@
     <nav>
         <a href="/">◂ zpět na seznam</a>
     </nav>
+    <form th:action="@{/detail}" method="post">
+        <input name="id" type="hidden" th:value="${id}" />
+        <div>
+            <button type="submit" class="btn btn-danger">Smazat</button>
+        </div>
+    </form>
 </div>
 </body>
 </html>
